# my_blog

./: .gitignore  .pdm.toml  Makefile  Pipfile  README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/articles/: 2021-books.md  2022-books.md  IEEE-754.md  kindness.md  raspberry-pi-3-setup.md  raspberry-pi-proxy-server-in-lan.md  redis-eight-legged-essay.md  the-josephus-problem.md
content/extras/: CNAME
content/pages/: about.md
content/x/: budget_abacus.html
pelican-themes/pelican-blue/static/css/: pygments.css  style.css
pelican-themes/pelican-blue/templates/: article.html  base.html
