[tool.pdm.dev-dependencies]
dev = []

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Andy Suen", email = "AndySuen@users.noreply.github.com"},
]
dependencies = [
    "pelican>=4.8.0",
    "Markdown>=3.4.1",
    "ghp-import>=2.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
